--- a/tl/findword.html
+++ b/tl/findword.html
@@ -19,7 +19,7 @@
     <meta property="og:title" content="FindWord - Pang-araw-araw na Laro ng Salita | englishtests.online">
     <meta property="og:description" content="Hamunin ang iyong sarili sa FindWord, isang pang-araw-araw na laro ng salita na may 144 random na letra. Hanapin ang mga salitang Ingles at makipagkumpetensya sa mga kaibigan sa buong mundo.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://englishtests.online/findword">
+    <meta property="og:url" content="https://englishtests.online/tl/findword">
 
 	<link rel="alternate" hreflang="en" href="https://englishtests.online/findword" />
     <link rel="alternate" hreflang="zh" href="https://englishtests.online/zh-CN/findword" />
@@ -48,7 +48,7 @@
     </script>
     
     <!-- Canonical URL to prevent duplicate content issues -->
-    <link rel="canonical" href="https://englishtests.online/findword">
+    <link rel="canonical" href="https://englishtests.online/tl/findword">
     
     <!-- Additional SEO-friendly meta tags -->
     <meta name="robots" content="index, follow">
