--- a/pt-br/findword.html
+++ b/pt-br/findword.html
@@ -19,7 +19,7 @@
     <meta property="og:title" content="FindWord - Jogo Diário de Palavras | englishtests.online">
     <meta property="og:description" content="Desafie-se com o FindWord, um jogo diário de palavras com 144 letras aleatórias. Encontre palavras em inglês e compita com amigos do mundo todo.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://englishtests.online/findword">
+    <meta property="og:url" content="https://englishtests.online/pt-br/findword">
    
     <link rel="alternate" hreflang="en" href="https://englishtests.online/findword" />
     <link rel="alternate" hreflang="zh" href="https://englishtests.online/zh-CN/findword" />
@@ -48,7 +48,7 @@
     </script>
    
     <!-- URL Canônica para evitar problemas de conteúdo duplicado -->
-    <link rel="canonical" href="https://englishtests.online/findword">
+    <link rel="canonical" href="https://englishtests.online/pt-br/findword">
    
     <meta name="robots" content="index, follow">
     <meta name="author" content="englishtests.online">
