--- a/ko/findword.html
+++ b/ko/findword.html
@@ -19,7 +19,7 @@
     <meta property="og:title" content="FindWord - 매일 즐기는 단어 퍼즐 게임 | englishtests.online">
     <meta property="og:description" content="FindWord는 매일 새로운 단어 퍼즐을 제공하는 게임입니다. 144개의 무작위 문자 속에서 영어 단어를 찾아 친구들과 경쟁하세요.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://englishtests.online/findword">
+    <meta property="og:url" content="https://englishtests.online/ko/findword">
 
 	<link rel="alternate" hreflang="en" href="https://englishtests.online/findword" />
     <link rel="alternate" hreflang="zh" href="https://englishtests.online/zh-CN/findword" />
@@ -48,7 +48,7 @@
     </script>
     
     <!-- Canonical URL to prevent duplicate content issues -->
-    <link rel="canonical" href="https://englishtests.online/findword">
+    <link rel="canonical" href="https://englishtests.online/ko/findword">
     
     <!-- Additional SEO-friendly meta tags -->
     <meta name="robots" content="index, follow">
