--- a/ja/findword.html
+++ b/ja/findword.html
@@ -19,7 +19,7 @@
     <meta property="og:title" content="FindWord - 毎日楽しめるワードパズルゲーム | englishtests.online">
     <meta property="og:description" content="FindWordは、144個のランダムな文字から英単語を見つけるワードパズルゲーム。世界中の友達と競い合いましょう！">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://englishtests.online/findword">
+    <meta property="og:url" content="https://englishtests.online/ja/findword">
 
 	<link rel="alternate" hreflang="en" href="https://englishtests.online/findword" />
     <link rel="alternate" hreflang="zh" href="https://englishtests.online/zh-CN/findword" />
@@ -48,7 +48,7 @@
     </script>
     
     <!-- Canonical URL to prevent duplicate content issues -->
-    <link rel="canonical" href="https://englishtests.online/findword">
+    <link rel="canonical" href="https://englishtests.online/ja/findword">
     
     <!-- Additional SEO-friendly meta tags -->
     <meta name="robots" content="index, follow">
