--- a/id/findword.html
+++ b/id/findword.html
@@ -19,7 +19,7 @@
     <meta property="og:title" content="FindWord - Permainan Teka-Teki Kata Harian | englishtests.online">
     <meta property="og:description" content="Tantang diri Anda dengan FindWord, permainan teka-teki kata harian dengan 144 huruf acak. Temukan kata-kata bahasa Inggris dan bersaing dengan teman di seluruh dunia.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://englishtests.online/findword">
+    <meta property="og:url" content="https://englishtests.online/id/findword">
 
 	<link rel="alternate" hreflang="en" href="https://englishtests.online/findword" />
     <link rel="alternate" hreflang="zh" href="https://englishtests.online/zh-CN/findword" />
@@ -48,7 +48,7 @@
     </script>
     
     <!-- Canonical URL to prevent duplicate content issues -->
-    <link rel="canonical" href="https://englishtests.online/findword">
+    <link rel="canonical" href="https://englishtests.online/id/findword">
     
     <!-- Additional SEO-friendly meta tags -->
     <meta name="robots" content="index, follow">
