--- a/hi/findword.html
+++ b/hi/findword.html
@@ -20,7 +20,7 @@
     <meta property="og:title" content="FindWord - दैनिक शब्द पहेली खेल | englishtests.online">
     <meta property="og:description" content="FindWord के साथ अपने दिमाग को चुनौती दें, एक दैनिक शब्द पहेली खेल जिसमें 144 यादृच्छिक अक्षर होते हैं। अंग्रेज़ी शब्द खोजें और दुनिया भर में दोस्तों के साथ प्रतिस्पर्धा करें।">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://englishtests.online/findword">
+    <meta property="og:url" content="https://englishtests.online/hi/findword">
 
 	<link rel="alternate" hreflang="en" href="https://englishtests.online/findword" />
     <link rel="alternate" hreflang="zh" href="https://englishtests.online/zh-CN/findword" />
@@ -49,7 +49,7 @@
     </script>
     
     <!-- Canonical URL to prevent duplicate content issues -->
-    <link rel="canonical" href="https://englishtests.online/findword">
+    <link rel="canonical" href="https://englishtests.online/hi/findword">
     
     <!-- Additional SEO-friendly meta tags -->
     <meta name="robots" content="index, follow">
