--- a/fr/findword.html
+++ b/fr/findword.html
@@ -20,7 +20,7 @@
     <meta property="og:title" content="FindWord - Jeu de puzzle de mots quotidien | englishtests.online">
     <meta property="og:description" content="Mettez-vous au défi avec FindWord, un jeu de puzzle de mots quotidien avec 144 lettres aléatoires. Trouvez des mots anglais et affrontez vos amis du monde entier.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://englishtests.online/findword">
+    <meta property="og:url" content="https://englishtests.online/fr/findword">
 
 	<link rel="alternate" hreflang="en" href="https://englishtests.online/findword" />
     <link rel="alternate" hreflang="zh" href="https://englishtests.online/zh-CN/findword" />
@@ -49,7 +49,7 @@
     </script>
     
     <!-- Canonical URL to prevent duplicate content issues -->
-    <link rel="canonical" href="https://englishtests.online/findword">
+    <link rel="canonical" href="https://englishtests.online/fr/findword">
     
     <!-- Additional SEO-friendly meta tags -->
     <meta name="robots" content="index, follow">
