--- a/es/findword.html
+++ b/es/findword.html
@@ -19,7 +19,7 @@
     <meta property="og:title" content="FindWord - Juego diario de palabras | englishtests.online">
     <meta property="og:description" content="Desafíate con FindWord, un juego de palabras diario con 144 letras aleatorias. Encuentra palabras en inglés y compite con amigos de todo el mundo.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://englishtests.online/findword">
+    <meta property="og:url" content="https://englishtests.online/es/findword">
 
 	<link rel="alternate" hreflang="en" href="https://englishtests.online/findword" />
     <link rel="alternate" hreflang="zh" href="https://englishtests.online/zh-CN/findword" />
@@ -48,7 +48,7 @@
     </script>
     
     <!-- Canonical URL to prevent duplicate content issues -->
-    <link rel="canonical" href="https://englishtests.online/findword">
+    <link rel="canonical" href="https://englishtests.online/es/findword">
     
     <!-- Additional SEO-friendly meta tags -->
     <meta name="robots" content="index, follow">
