--- a/de/findword.html
+++ b/de/findword.html
@@ -20,7 +20,7 @@
     <meta property="og:title" content="FindWord - Tägliches Worträtsel | englishtests.online">
     <meta property="og:description" content="Fordere dich mit FindWord heraus, einem täglichen Worträtselspiel mit 144 zufälligen Buchstaben. Finde englische Wörter und tritt gegen Freunde weltweit an.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://englishtests.online/findword">
+    <meta property="og:url" content="https://englishtests.online/de/findword">
 
 	<link rel="alternate" hreflang="en" href="https://englishtests.online/findword" />
     <link rel="alternate" hreflang="zh" href="https://englishtests.online/zh-CN/findword" />
@@ -49,7 +49,7 @@
     </script>
     
     <!-- Canonical URL to prevent duplicate content issues -->
-    <link rel="canonical" href="https://englishtests.online/findword">
+    <link rel="canonical" href="https://englishtests.online/de/findword">
     
     <!-- Additional SEO-friendly meta tags -->
     <meta name="robots" content="index, follow">
