--- a/bn/findword.html
+++ b/bn/findword.html
@@ -20,7 +20,7 @@
     <meta property="og:title" content="FindWord - দৈনিক শব্দের ধাঁধা খেলা | englishtests.online">
     <meta property="og:description" content="FindWord-এর মাধ্যমে নিজেকে চ্যালেঞ্জ করুন! ১৪৪টি এলোমেলো অক্ষরের মধ্যে ইংরেজি শব্দ খুঁজুন এবং বিশ্বব্যাপী বন্ধুদের সাথে প্রতিযোগিতা করুন।">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://englishtests.online/findword">
+    <meta property="og:url" content="https://englishtests.online/bn/findword">
 
     <link rel="alternate" hreflang="en" href="https://englishtests.online/findword" />
     <link rel="alternate" hreflang="zh" href="https://englishtests.online/zh-CN/findword" />
@@ -49,7 +49,7 @@
     </script>
     
     <!-- Canonical URL to prevent duplicate content issues -->
-    <link rel="canonical" href="https://englishtests.online/findword">
+    <link rel="canonical" href="https://englishtests.online/bn/findword">
     
     <!-- Additional SEO-friendly meta tags -->
     <meta name="robots" content="index, follow">
