--- a/ar/findword.html
+++ b/ar/findword.html
@@ -20,7 +20,7 @@
     <meta property="og:title" content="FindWord - لعبة الكلمات اليومية | englishtests.online">
     <meta property="og:description" content="اختبر مهاراتك مع FindWord، لعبة الكلمات اليومية التي تحتوي على 144 حرفًا عشوائيًا. اكتشف الكلمات الإنجليزية وتنافس مع الأصدقاء حول العالم.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://englishtests.online/findword">
+    <meta property="og:url" content="https://englishtests.online/ar/findword">
 
     <link rel="alternate" hreflang="en" href="https://englishtests.online/findword" />
     <link rel="alternate" hreflang="zh" href="https://englishtests.online/zh-CN/findword" />
@@ -49,7 +49,7 @@
     </script>
     
     <!-- Canonical URL to prevent duplicate content issues -->
-    <link rel="canonical" href="https://englishtests.online/findword">
+    <link rel="canonical" href="https://englishtests.online/ar/findword">
     
     <!-- Additional SEO-friendly meta tags -->
     <meta name="robots" content="index, follow">
