--- a/about-us.html
+++ b/about-us.html
@@ -242,7 +242,7 @@
                 <li><strong>Mobile-Friendly Design:</strong> Practice your English skills anytime, anywhere on any device.</li>
                 <li><strong>Regular Updates:</strong> We continuously add new tests and improve existing ones based on user feedback and evolving language teaching methodologies.</li>
                 <li><strong>Instant Result:</strong> Upon completion of each test you get your score.</li>
-                <li><strong>Keep Your Progress:</strong> Your results are saved and displayed at the tests page.</li>
+                <li><strong>Keep Your Progress:</strong> Your results are saved and displayed at the tests pages.</li>
             </ul>
         </section>
         
