--- a/test-page.html
+++ b/test-page.html
@@ -69,6 +69,11 @@
             align-items: center;
             padding: 10px 0;
             margin-bottom: 20px;
+            background-color: white;
+            position: sticky;
+            top: 0;
+            z-index: 100;
+	    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
         }
         
         /* Center title and adjust width */
