--- a/test-page.html
+++ b/test-page.html
@@ -15,10 +15,10 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 40px;
+            margin: 40px auto;
             max-width: 800px;
             padding: 10px;
-            align-items: center;
+            padding-top: 70px; /* Add padding to accommodate fixed header */
         }
         .question {
             margin-bottom: 20px;
@@ -70,10 +70,15 @@
             padding: 10px 0;
             margin-bottom: 20px;
             background-color: white;
-            position: sticky;
+            position: fixed;
             top: 0;
+            left: 0;
+            right: 0;
             z-index: 100;
-	    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+            max-width: 800px;
+            margin-left: 10px;
+            margin-right: auto;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
         }
         
         /* Center title and adjust width */
