--- a/b2-english-tests.html
+++ b/b2-english-tests.html
@@ -433,11 +433,11 @@
         </a>
 
         <div class="dropdown-menu" id="sandwichDropdown">
-            <a href="https://englishtests.online/learn-english-effectively">Learning English</a>
+            <a href="https://englishtests.online/learn-english-effectively">Learning English <img src="language.png" style="float: right; margin-left: 5px; position: relative; top: -2px; max-width: 24px; max-height: 24px; width: auto; height: auto;"></a>
             <a href="https://englishtests.online/about-us">About Us</a>
             <a href="https://englishtests.online/terms-of-use">Terms of Use</a>
             <a href="https://englishtests.online/privacy-policy">Privacy Policy</a>
-            <a href="https://englishtests.online/findword">FindWord Puzzle</a>
+            <a href="https://englishtests.online/findword">FindWord Puzzle <img src="language.png" style="float: right; margin-left: 5px; position: relative; top: -2px; max-width: 24px; max-height: 24px; width: auto; height: auto;"></a>
         </div>
     </div>
 
