--- a/pt-br/aprender-ingles-com-eficiencia.html
+++ b/pt-br/aprender-ingles-com-eficiencia.html
@@ -21,22 +21,22 @@
     <meta property="og:type" content="article">
     <meta property="og:url" content="https://englishtests.online/pt-br/aprender-ingles-com-eficiencia">
 
-    <link rel="alternate" hreflang="en" href="https://englishtests.online/learn-english-effectively/" />
-    <link rel="alternate" hreflang="zh" href="https://englishtests.online/zh-CN/xuexi-yingyu-gaoxiaolv/" />
-    <link rel="alternate" hreflang="hi" href="https://englishtests.online/hi/angreji-sikhne-ke-saral-tarike/" />
-    <link rel="alternate" hreflang="es" href="https://englishtests.online/es/aprender-ingles-eficientemente/" />
-    <link rel="alternate" hreflang="fr" href="https://englishtests.online/fr/apprendre-anglais-efficacement/" />
-    <link rel="alternate" hreflang="ar" href="https://englishtests.online/ar/taelim-alanjlyzyh-bikfaa/" />
-    <link rel="alternate" hreflang="bn" href="https://englishtests.online/bn/ingreji-sikhte-sabche-bhalo-upay/" />
-    <link rel="alternate" hreflang="pt-br" href="https://englishtests.online/pt-br/aprender-ingles-com-eficiencia/" />
-    <link rel="alternate" hreflang="id" href="https://englishtests.online/id/belajar-bahasa-inggris-efektif/" />
-    <link rel="alternate" hreflang="de" href="https://englishtests.online/de/englisch-effektiv-lernen/" />
-    <link rel="alternate" hreflang="ja" href="https://englishtests.online/ja/eigo-wo-kouka-teki-ni-manabu/" />
-    <link rel="alternate" hreflang="tr" href="https://englishtests.online/tr/ingilizce-etkili-ogrenme/" />
-    <link rel="alternate" hreflang="vi" href="https://englishtests.online/vi/hoc-tieng-anh-hieu-qua/" />
-    <link rel="alternate" hreflang="tl" href="https://englishtests.online/tl/mabisang-pag-aaral-ng-ingles/" />
-    <link rel="alternate" hreflang="ko" href="https://englishtests.online/ko/yeongeo-hwalryeokjeog-eolearn/" />
-    <link rel="alternate" hreflang="x-default" href="https://englishtests.online/learn-english-effectively/" />
+    <link rel="alternate" hreflang="en" href="https://englishtests.online/learn-english-effectively" />
+    <link rel="alternate" hreflang="zh" href="https://englishtests.online/zh-CN/xuexi-yingyu-gaoxiaolv" />
+    <link rel="alternate" hreflang="hi" href="https://englishtests.online/hi/angreji-sikhne-ke-saral-tarike" />
+    <link rel="alternate" hreflang="es" href="https://englishtests.online/es/aprender-ingles-eficientemente" />
+    <link rel="alternate" hreflang="fr" href="https://englishtests.online/fr/apprendre-anglais-efficacement" />
+    <link rel="alternate" hreflang="ar" href="https://englishtests.online/ar/taelim-alanjlyzyh-bikfaa" />
+    <link rel="alternate" hreflang="bn" href="https://englishtests.online/bn/ingreji-sikhte-sabche-bhalo-upay" />
+    <link rel="alternate" hreflang="pt-br" href="https://englishtests.online/pt-br/aprender-ingles-com-eficiencia" />
+    <link rel="alternate" hreflang="id" href="https://englishtests.online/id/belajar-bahasa-inggris-efektif" />
+    <link rel="alternate" hreflang="de" href="https://englishtests.online/de/englisch-effektiv-lernen" />
+    <link rel="alternate" hreflang="ja" href="https://englishtests.online/ja/eigo-wo-kouka-teki-ni-manabu" />
+    <link rel="alternate" hreflang="tr" href="https://englishtests.online/tr/ingilizce-etkili-ogrenme" />
+    <link rel="alternate" hreflang="vi" href="https://englishtests.online/vi/hoc-tieng-anh-hieu-qua" />
+    <link rel="alternate" hreflang="tl" href="https://englishtests.online/tl/mabisang-pag-aaral-ng-ingles" />
+    <link rel="alternate" hreflang="ko" href="https://englishtests.online/ko/yeongeo-hwalryeokjeog-eolearn" />
+    <link rel="alternate" hreflang="x-default" href="https://englishtests.online/learn-english-effectively" />
 
 
     <!-- Google Analytics (GA4) -->
@@ -235,7 +235,7 @@
             </svg>
         </a>
         <h1 style="font-size: 20px; text-align: center; flex-grow: 1;">Como Aprender Inglês com Eficiência:<br>Minha Jornada e Conselhos</h1>
-        <a href="https://englishtests.online/" class="home-button">
+        <a href="https://englishtests.online" class="home-button">
             <svg class="home-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
                 <path d="M575.8 255.5c0 18-15 32.1-32 32.1h-32l.7 160.2c0 2.7-.2 5.4-.5 8.1V472c0 22.1-17.9 40-40 40H456c-1.1 0-2.2 0-3.3-.1c-1.4 .1-2.8 .1-4.2 .1H416 392c-22.1 0-40-17.9-40-40V448 384c0-17.7-14.3-32-32-32H256c-17.7 0-32 14.3-32 32v64 24c0 22.1-17.9 40-40 40H160 128.1c-1.5 0-3-.1-4.5-.2c-1.2 .1-2.4 .2-3.6 .2H104c-22.1 0-40-17.9-40-40V360c0-.9 0-1.9 .1-2.8V287.6H32c-18 0-32-14-32-32.1c0-9 3-17 10-24L266.4 8c7-7 15-8 22-8s15 2 21 7L564.8 231.5c8 7 12 15 11 24z"/>
             </svg>
