--- a/index.html
+++ b/index.html
@@ -29,17 +29,17 @@
     <meta property="og:title" content="Free English tests online | englishtests.online">
     <meta property="og:description" content="Test your English proficiency with hundreds of free online tests covering all CEFR levels from A1 to C2. Improve your grammar, vocabulary, and reading skills.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://englishtests.online">
+    <meta property="og:url" content="https://englishtests.online/">
     
     <!-- Canonical URL to prevent duplicate content issues -->
-    <link rel="canonical" href="https://englishtests.online">
+    <link rel="canonical" href="https://englishtests.online/">
     <!-- Schema.org Markup for Google -->
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
   "@type": "EducationalOrganization",
   "name": "Free English tests online",
-  "url": "https://englishtests.online",
+  "url": "https://englishtests.online/",
   "description": "Free online English tests for all levels from A1 to C2. Practice and improve your English language skills with hundreds of free tests and exercises."
 }
 </script>
@@ -56,7 +56,7 @@
   "provider": {
     "@type": "Organization",
     "name": "English Tests Online",
-    "url": "https://englishtests.online"
+    "url": "https://englishtests.online/"
   }
 }
 </script>
