--- a/about-us.html
+++ b/about-us.html
@@ -182,7 +182,7 @@
             </svg>
         </a>
         <h1 style="font-size: 24px; text-align: center; flex-grow: 1;">About Us</h1>
-	<a href="https://englishtests.online" class="home-button">
+	<a href="https://englishtests.online/" class="home-button">
             <svg class="home-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
                 <path d="M575.8 255.5c0 18-15 32.1-32 32.1h-32l.7 160.2c0 2.7-.2 5.4-.5 8.1V472c0 22.1-17.9 40-40 40H456c-1.1 0-2.2 0-3.3-.1c-1.4 .1-2.8 .1-4.2 .1H416 392c-22.1 0-40-17.9-40-40V448 384c0-17.7-14.3-32-32-32H256c-17.7 0-32 14.3-32 32v64 24c0 22.1-17.9 40-40 40H160 128.1c-1.5 0-3-.1-4.5-.2c-1.2 .1-2.4 .2-3.6 .2H104c-22.1 0-40-17.9-40-40V360c0-.9 0-1.9 .1-2.8V287.6H32c-18 0-32-14-32-32.1c0-9 3-17 10-24L266.4 8c7-7 15-8 22-8s15 2 21 7L564.8 231.5c8 7 12 15 11 24z"/>
             </svg>
@@ -192,7 +192,7 @@
     <main>
         <section class="section" id="welcome">
             <h2>Welcome!</h2>
-	    <p>At <a href="https://englishtests.online">englishtests.online</a>, we are passionate about making English language learning accessible, effective, and enjoyable for everyone. Founded by language education enthusiasts, our platform offers <strong>hundreds of free English tests</strong> designed to help learners at all proficiency levels improve their skills.</p>
+	    <p>At <a href="https://englishtests.online/">englishtests.online</a>, we are passionate about making English language learning accessible, effective, and enjoyable for everyone. Founded by language education enthusiasts, our platform offers <strong>hundreds of free English tests</strong> designed to help learners at all proficiency levels improve their skills.</p>
         </section>
         
         <section class="section" id="mission">
@@ -266,7 +266,7 @@
         "@context": "https://schema.org",
         "@type": "EducationalOrganization",
         "name": "englishtests.online",
-        "url": "https://englishtests.online",
+        "url": "https://englishtests.online/",
         "description": "Free English tests for all proficiency levels from A1 to C2, with immediate feedback and no registration required.",
         "email": "info@englishtests.online",
         "sameAs": [],
