--- a/learn-english-effectively.html
+++ b/learn-english-effectively.html
@@ -236,7 +236,7 @@
             </svg>
         </a>
         <h1 style="font-size: 20px; text-align: center; flex-grow: 1;">How to Learn English Effectively:<br>My Journey and Advice</h1>
-        <a href="https://englishtests.online" class="home-button">
+        <a href="https://englishtests.online/" class="home-button">
             <svg class="home-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
                 <path d="M575.8 255.5c0 18-15 32.1-32 32.1h-32l.7 160.2c0 2.7-.2 5.4-.5 8.1V472c0 22.1-17.9 40-40 40H456c-1.1 0-2.2 0-3.3-.1c-1.4 .1-2.8 .1-4.2 .1H416 392c-22.1 0-40-17.9-40-40V448 384c0-17.7-14.3-32-32-32H256c-17.7 0-32 14.3-32 32v64 24c0 22.1-17.9 40-40 40H160 128.1c-1.5 0-3-.1-4.5-.2c-1.2 .1-2.4 .2-3.6 .2H104c-22.1 0-40-17.9-40-40V360c0-.9 0-1.9 .1-2.8V287.6H32c-18 0-32-14-32-32.1c0-9 3-17 10-24L266.4 8c7-7 15-8 22-8s15 2 21 7L564.8 231.5c8 7 12 15 11 24z"/>
             </svg>
@@ -393,7 +393,7 @@
 
         <section class="section" id="consistency">
             <h3>12. Consistency and Persistence: The Long Game is the Only Game</h3>
-            <p>Finally, and this is maybe the most important thing I learned on my journey: <strong>consistency and persistence</strong> are everything. Language acquisition isn't a sprint; it's a marathon. There will be ups and downs, moments of frustration, and times when you feel like you're not making progress. But you have to keep going! <strong>Establish a regular study schedule</strong> and stick to it as much as possible, even if it's just for 30 minutes a day. <strong>Motivation will fluctuate</strong>, so you need discipline. Celebrate your small wins, set realistic expectations, and try to find joy in the process itself. Remember to <strong>track your progress</strong> (like I did with my spreadsheets!) and periodically check in with your goals and learning methods to make sure they are still working for you. Embrace the challenges, learn from your mistakes, and most importantly, <strong>don't give up!</strong> Fluency is absolutely achievable with consistent effort, the right resources, and a positive attitude. And as you progress, remember to check your level and practice what you've learned. For reliable assessment and practice in grammar, use of English, vocabulary, and reading, I personally recommend <a href="https://englishtests.online" target="_blank" rel="noopener noreferrer">englishtests.online</a>. It's a great resource of free English tests to gauge your progress and keep your skills sharp.</p>
+            <p>Finally, and this is maybe the most important thing I learned on my journey: <strong>consistency and persistence</strong> are everything. Language acquisition isn't a sprint; it's a marathon. There will be ups and downs, moments of frustration, and times when you feel like you're not making progress. But you have to keep going! <strong>Establish a regular study schedule</strong> and stick to it as much as possible, even if it's just for 30 minutes a day. <strong>Motivation will fluctuate</strong>, so you need discipline. Celebrate your small wins, set realistic expectations, and try to find joy in the process itself. Remember to <strong>track your progress</strong> (like I did with my spreadsheets!) and periodically check in with your goals and learning methods to make sure they are still working for you. Embrace the challenges, learn from your mistakes, and most importantly, <strong>don't give up!</strong> Fluency is absolutely achievable with consistent effort, the right resources, and a positive attitude. And as you progress, remember to check your level and practice what you've learned. For reliable assessment and practice in grammar, use of English, vocabulary, and reading, I personally recommend <a href="https://englishtests.online/" target="_blank" rel="noopener noreferrer">englishtests.online</a>. It's a great resource of free English tests to gauge your progress and keep your skills sharp.</p>
             <div class="tip-box">
                 <div class="tip-title">Tip:</div>
                 <p><strong>Make English learning a <em>habit</em>, not just a hobby. Create a realistic study schedule and stick to it, even when motivation dips. Celebrate small victories and remember – persistence is the ultimate key! And don't forget to regularly assess your skills using resources like englishtests.online to track your improvement.</strong></p>
@@ -424,7 +424,7 @@
         "publisher": {
             "@type": "Organization",
             "name": "englishtests.online",
-            "url": "https://englishtests.online"
+            "url": "https://englishtests.online/"
         },
         "url": "https://englishtests.online/learn-english-effectively",
         "mainEntityOfPage": {
