--- a/ar/taelim-alanjlyzyh-bikfaa.html
+++ b/ar/taelim-alanjlyzyh-bikfaa.html
@@ -232,7 +232,7 @@
 </head>
 <body>
     <header>
-        <a href="https://englishtests.online" class="home-button">
+        <a href="https://englishtests.online/" class="home-button">
             <svg class="home-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
                 <path d="M575.8 255.5c0 18-15 32.1-32 32.1h-32l.7 160.2c0 2.7-.2 5.4-.5 8.1V472c0 22.1-17.9 40-40 40H456c-1.1 0-2.2 0-3.3-.1c-1.4 .1-2.8 .1-4.2 .1H416 392c-22.1 0-40-17.9-40-40V448 384c0-17.7-14.3-32-32-32H256c-17.7 0-32 14.3-32 32v64 24c0 22.1-17.9 40-40 40H160 128.1c-1.5 0-3-.1-4.5-.2c-1.2 .1-2.4 .2-3.6 .2H104c-22.1 0-40-17.9-40-40V360c0-.9 0-1.9 .1-2.8V287.6H32c-18 0-32-14-32-32.1c0-9 3-17 10-24L266.4 8c7-7 15-8 22-8s15 2 21 7L564.8 231.5c8 7 12 15 11 24z"/>
             </svg>
@@ -395,7 +395,7 @@
 
         <section class="section" id="consistency" dir="rtl">
             <h3>12. الاتساق والمثابرة: اللعبة الطويلة هي اللعبة الوحيدة</h3>
-            <p>أخيرًا، وربما هذا هو أهم شيء تعلمته في رحلتي: <strong>الاتساق والمثابرة</strong> هما كل شيء. اكتساب اللغة ليس سباقًا سريعًا؛ إنه ماراثون. ستكون هناك صعود وهبوط، لحظات من الإحباط، وأوقات تشعر فيها أنك لا تحرز تقدمًا. لكن عليك الاستمرار! <strong>ضع جدول دراسة منتظم</strong> والتزم به قدر الإمكان، حتى لو كان ذلك لمدة 30 دقيقة فقط في اليوم. <strong>الدافع سيتقلب</strong>، لذا تحتاج إلى الانضباط. احتفل بإنجازاتك الصغيرة، وضع توقعات واقعية، وحاول إيجاد السعادة في العملية نفسها. تذكر <strong>تتبع تقدمك</strong> (كما فعلت مع جداول البيانات الخاصة بي!) وافحص دوريًا أهدافك وطرق التعلم للتأكد من أنها لا تزال تعمل لك. تبنى التحديات، تعلم من أخطائك، والأهم من ذلك، <strong>لا تستسلم!</strong> الطلاقة قابلة للتحقيق تمامًا مع الجهد المستمر، والموارد المناسبة، والموقف الإيجابي. ومع تقدمك، تذكر أن تتحقق من مستواك وتمارس ما تعلمته. للتقييم الموثوق والممارسة في القواعد، واستخدام اللغة الإنجليزية، والمفردات، والقراءة، أوصي شخصيًا بـ <a href="https://englishtests.online" target="_blank" rel="noopener noreferrer">englishtests.online</a>. إنه مورد رائع للاختبارات الإنجليزية المجانية لقياس تقدمك والحفاظ على مهاراتك حادة.</p>
+            <p>أخيرًا، وربما هذا هو أهم شيء تعلمته في رحلتي: <strong>الاتساق والمثابرة</strong> هما كل شيء. اكتساب اللغة ليس سباقًا سريعًا؛ إنه ماراثون. ستكون هناك صعود وهبوط، لحظات من الإحباط، وأوقات تشعر فيها أنك لا تحرز تقدمًا. لكن عليك الاستمرار! <strong>ضع جدول دراسة منتظم</strong> والتزم به قدر الإمكان، حتى لو كان ذلك لمدة 30 دقيقة فقط في اليوم. <strong>الدافع سيتقلب</strong>، لذا تحتاج إلى الانضباط. احتفل بإنجازاتك الصغيرة، وضع توقعات واقعية، وحاول إيجاد السعادة في العملية نفسها. تذكر <strong>تتبع تقدمك</strong> (كما فعلت مع جداول البيانات الخاصة بي!) وافحص دوريًا أهدافك وطرق التعلم للتأكد من أنها لا تزال تعمل لك. تبنى التحديات، تعلم من أخطائك، والأهم من ذلك، <strong>لا تستسلم!</strong> الطلاقة قابلة للتحقيق تمامًا مع الجهد المستمر، والموارد المناسبة، والموقف الإيجابي. ومع تقدمك، تذكر أن تتحقق من مستواك وتمارس ما تعلمته. للتقييم الموثوق والممارسة في القواعد، واستخدام اللغة الإنجليزية، والمفردات، والقراءة، أوصي شخصيًا بـ <a href="https://englishtests.online/" target="_blank" rel="noopener noreferrer">englishtests.online</a>. إنه مورد رائع للاختبارات الإنجليزية المجانية لقياس تقدمك والحفاظ على مهاراتك حادة.</p>
             <div class="tip-box">
                 <div class="tip-title">نصيحة:</div>
                 <p><strong>اجعل تعلم اللغة الإنجليزية <em>عادة</em>، وليس مجرد هواية. أنشئ جدول دراسة واقعي والتزم به، حتى عندما ينخفض الدافع. احتفل بالانتصارات الصغيرة وتذكر - المثابرة هي المفتاح النهائي! ولا تنس أن تقيم مهاراتك بانتظام باستخدام موارد مثل englishtests.online لتتبع تحسنك.</strong></p>
@@ -426,7 +426,7 @@
         "publisher": {
             "@type": "Organization",
             "name": "englishtests.online",
-            "url": "https://englishtests.online"
+            "url": "https://englishtests.online/"
         },
         "url": "https://englishtests.online/ar/taelim-alanjlyzyh-bikfaa",
         "mainEntityOfPage": {
