--- a/bn/ingreji-sikhte-sabche-bhalo-upay.html
+++ b/bn/ingreji-sikhte-sabche-bhalo-upay.html
@@ -236,7 +236,7 @@
             </svg>
         </a>
         <h1 style="font-size: 20px; text-align: center; flex-grow: 1;">কার্যকরভাবে ইংরেজি শেখা:<br>আমার যাত্রা এবং পরামর্শ</h1>
-        <a href="https://englishtests.online" class="home-button">
+        <a href="https://englishtests.online/" class="home-button">
             <svg class="home-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
                 <path d="M575.8 255.5c0 18-15 32.1-32 32.1h-32l.7 160.2c0 2.7-.2 5.4-.5 8.1V472c0 22.1-17.9 40-40 40H456c-1.1 0-2.2 0-3.3-.1c-1.4 .1-2.8 .1-4.2 .1H416 392c-22.1 0-40-17.9-40-40V448 384c0-17.7-14.3-32-32-32H256c-17.7 0-32 14.3-32 32v64 24c0 22.1-17.9 40-40 40H160 128.1c-1.5 0-3-.1-4.5-.2c-1.2 .1-2.4 .2-3.6 .2H104c-22.1 0-40-17.9-40-40V360c0-.9 0-1.9 .1-2.8V287.6H32c-18 0-32-14-32-32.1c0-9 3-17 10-24L266.4 8c7-7 15-8 22-8s15 2 21 7L564.8 231.5c8 7 12 15 11 24z"/>
             </svg>
@@ -393,7 +393,7 @@
 
         <section class="section" id="consistency">
             <h3>১২. ধারাবাহিকতা এবং দৃঢ়তা: দীর্ঘ খেলাই একমাত্র খেলা</h3>
-            <p>অবশেষে, এবং এটি হয়তো আমার যাত্রায় শেখা সবচেয়ে গুরুত্বপূর্ণ জিনিস: <strong>ধারাবাহিকতা এবং দৃঢ়তা</strong> সবকিছু। ভাষা অর্জন একটি স্প্রিন্ট নয়; এটি একটি ম্যারাথন। ওঠানামা, হতাশার মুহূর্ত, এবং এমন সময় আসবে যখন আপনি মনে করবেন যে আপনি অগ্রগতি করছেন না। কিন্তু আপনাকে চালিয়ে যেতে হবে! <strong>একটি নিয়মিত পড়াশোনার সময়সূচি</strong> তৈরি করুন এবং যতটা সম্ভব এটি মেনে চলুন, এমনকি যদি এটি প্রতিদিন মাত্র ৩০ মিনিটের জন্যও হয়। <strong>অনুপ্রেরণা ওঠানামা করবে</strong>, তাই আপনার শৃঙ্খলা প্রয়োজন। আপনার ছোট জয়গুলি উদযাপন করুন, বাস্তবসম্মত প্রত্যাশা রাখুন, এবং প্রক্রিয়াটি নিজেই উপভোগ করার চেষ্টা করুন। <strong>আপনার অগ্রগতি ট্র্যাক করতে</strong> (যেমন আমি আমার স্প্রেডশীটগুলিতে করেছি!) এবং নিয়মিতভাবে আপনার লক্ষ্য এবং শেখার পদ্ধতিগুলি চেক করুন যাতে তারা এখনও আপনার জন্য কাজ করছে কিনা তা নিশ্চিত করতে পারেন। চ্যালেঞ্জগুলি গ্রহণ করুন, আপনার ভুল থেকে শিখুন, এবং সবচেয়ে গুরুত্বপূর্ণভাবে, <strong>হাল ছাড়বেন না!</strong> ধারাবাহিক প্রচেষ্টা, সঠিক সম্পদ, এবং ইতিবাচক মনোভাব দিয়ে দক্ষতা অর্জন করা সম্পূর্ণভাবে সম্ভব। এবং যেমন আপনি অগ্রসর হন, আপনার স্তর চেক করতে এবং আপনি যা শিখেছেন তা অনুশীলন করতে মনে রাখবেন। ব্যাকরণ, ইংরেজি ব্যবহার, শব্দভাণ্ডার, এবং পড়ার নির্ভরযোগ্য মূল্যায়ন এবং অনুশীলনের জন্য, আমি ব্যক্তিগতভাবে <a href="https://englishtests.online" target="_blank" rel="noopener noreferrer">englishtests.online</a> সুপারিশ করি। এটি আপনার অগ্রগতি পরিমাপ করতে এবং আপনার দক্ষতা ধারালো রাখার জন্য বিনামূল্যের ইংরেজি পরীক্ষার একটি দুর্দান্ত সম্পদ।</p>
+            <p>অবশেষে, এবং এটি হয়তো আমার যাত্রায় শেখা সবচেয়ে গুরুত্বপূর্ণ জিনিস: <strong>ধারাবাহিকতা এবং দৃঢ়তা</strong> সবকিছু। ভাষা অর্জন একটি স্প্রিন্ট নয়; এটি একটি ম্যারাথন। ওঠানামা, হতাশার মুহূর্ত, এবং এমন সময় আসবে যখন আপনি মনে করবেন যে আপনি অগ্রগতি করছেন না। কিন্তু আপনাকে চালিয়ে যেতে হবে! <strong>একটি নিয়মিত পড়াশোনার সময়সূচি</strong> তৈরি করুন এবং যতটা সম্ভব এটি মেনে চলুন, এমনকি যদি এটি প্রতিদিন মাত্র ৩০ মিনিটের জন্যও হয়। <strong>অনুপ্রেরণা ওঠানামা করবে</strong>, তাই আপনার শৃঙ্খলা প্রয়োজন। আপনার ছোট জয়গুলি উদযাপন করুন, বাস্তবসম্মত প্রত্যাশা রাখুন, এবং প্রক্রিয়াটি নিজেই উপভোগ করার চেষ্টা করুন। <strong>আপনার অগ্রগতি ট্র্যাক করতে</strong> (যেমন আমি আমার স্প্রেডশীটগুলিতে করেছি!) এবং নিয়মিতভাবে আপনার লক্ষ্য এবং শেখার পদ্ধতিগুলি চেক করুন যাতে তারা এখনও আপনার জন্য কাজ করছে কিনা তা নিশ্চিত করতে পারেন। চ্যালেঞ্জগুলি গ্রহণ করুন, আপনার ভুল থেকে শিখুন, এবং সবচেয়ে গুরুত্বপূর্ণভাবে, <strong>হাল ছাড়বেন না!</strong> ধারাবাহিক প্রচেষ্টা, সঠিক সম্পদ, এবং ইতিবাচক মনোভাব দিয়ে দক্ষতা অর্জন করা সম্পূর্ণভাবে সম্ভব। এবং যেমন আপনি অগ্রসর হন, আপনার স্তর চেক করতে এবং আপনি যা শিখেছেন তা অনুশীলন করতে মনে রাখবেন। ব্যাকরণ, ইংরেজি ব্যবহার, শব্দভাণ্ডার, এবং পড়ার নির্ভরযোগ্য মূল্যায়ন এবং অনুশীলনের জন্য, আমি ব্যক্তিগতভাবে <a href="https://englishtests.online/" target="_blank" rel="noopener noreferrer">englishtests.online</a> সুপারিশ করি। এটি আপনার অগ্রগতি পরিমাপ করতে এবং আপনার দক্ষতা ধারালো রাখার জন্য বিনামূল্যের ইংরেজি পরীক্ষার একটি দুর্দান্ত সম্পদ।</p>
             <div class="tip-box">
                 <div class="tip-title">পরামর্শ:</div>
                 <p><strong>ইংরেজি শেখা শুধু শখ নয়, <em>অভ্যাস</em> করুন। একটি বাস্তবসম্মত অধ্যয়ন সময়সূচি তৈরি করুন এবং এটিতে অটল থাকুন, এমনকি যখন অনুপ্রেরণা কমে যায়। ছোট বিজয়গুলি উদযাপন করুন এবং মনে রাখবেন – দৃঢ়তাই চূড়ান্ত চাবিকাঠি! এবং আপনার উন্নতি ট্র্যাক করতে englishtests.online এর মতো সম্পদ ব্যবহার করে নিয়মিত আপনার দক্ষতা মূল্যায়ন করতে ভুলবেন না।</strong></p>
@@ -424,7 +424,7 @@
         "publisher": {
             "@type": "Organization",
             "name": "englishtests.online",
-            "url": "https://englishtests.online"
+            "url": "https://englishtests.online/"
         },
         "url": "https://englishtests.online/bn/ingreji-sikhte-sabche-bhalo-upay",
         "mainEntityOfPage": {
