--- a/de/englisch-effektiv-lernen.html
+++ b/de/englisch-effektiv-lernen.html
@@ -236,7 +236,7 @@
             </svg>
         </a>
         <h1 style="font-size: 20px; text-align: center; flex-grow: 1;">Wie man Englisch effektiv lernt:<br>Meine Reise und Ratschläge</h1>
-        <a href="https://englishtests.online" class="home-button">
+        <a href="https://englishtests.online/" class="home-button">
             <svg class="home-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
                 <path d="M575.8 255.5c0 18-15 32.1-32 32.1h-32l.7 160.2c0 2.7-.2 5.4-.5 8.1V472c0 22.1-17.9 40-40 40H456c-1.1 0-2.2 0-3.3-.1c-1.4 .1-2.8 .1-4.2 .1H416 392c-22.1 0-40-17.9-40-40V448 384c0-17.7-14.3-32-32-32H256c-17.7 0-32 14.3-32 32v64 24c0 22.1-17.9 40-40 40H160 128.1c-1.5 0-3-.1-4.5-.2c-1.2 .1-2.4 .2-3.6 .2H104c-22.1 0-40-17.9-40-40V360c0-.9 0-1.9 .1-2.8V287.6H32c-18 0-32-14-32-32.1c0-9 3-17 10-24L266.4 8c7-7 15-8 22-8s15 2 21 7L564.8 231.5c8 7 12 15 11 24z"/>
             </svg>
@@ -393,7 +393,7 @@
 
         <section class="section" id="consistency">
             <h3>12. Konsequenz und Ausdauer: Das lange Spiel ist das einzige Spiel</h3>
-            <p>Schließlich, und das ist vielleicht das Wichtigste, was ich auf meiner Reise gelernt habe: <strong>Konsequenz und Ausdauer</strong> sind alles. Spracherwerb ist kein Sprint; es ist ein Marathon. Es wird Höhen und Tiefen geben, Momente der Frustration und Zeiten, in denen Sie das Gefühl haben, keine Fortschritte zu machen. Aber Sie müssen weitermachen! <strong>Erstellen Sie einen regelmäßigen Lernplan</strong> und halten Sie sich so gut wie möglich daran, auch wenn es nur 30 Minuten pro Tag sind. <strong>Die Motivation wird schwanken</strong>, daher brauchen Sie Disziplin. Feiern Sie Ihre kleinen Erfolge, setzen Sie realistische Erwartungen und versuchen Sie, Freude am Prozess selbst zu finden. Denken Sie daran, Ihren <strong>Fortschritt zu verfolgen</strong> (wie ich es mit meinen Tabellenkalkulationen getan habe!) und überprüfen Sie regelmäßig Ihre Ziele und Lernmethoden, um sicherzustellen, dass sie noch funktionieren. Nehmen Sie die Herausforderungen an, lernen Sie aus Ihren Fehlern und vor allem, <strong>geben Sie nicht auf!</strong> Flüssigkeit ist mit konsequentem Einsatz, den richtigen Ressourcen und einer positiven Einstellung absolut erreichbar. Und während Sie Fortschritte machen, denken Sie daran, Ihr Niveau zu überprüfen und das Gelernte zu üben. Für zuverlässige Bewertung und Übung in Grammatik, Englischgebrauch, Wortschatz und Lesen empfehle ich persönlich <a href="https://englishtests.online" target="_blank" rel="noopener noreferrer">englishtests.online</a>. Es ist eine großartige Ressource für kostenlose Englischtests, um Ihren Fortschritt zu messen und Ihre Fähigkeiten zu schärfen.</p>
+            <p>Schließlich, und das ist vielleicht das Wichtigste, was ich auf meiner Reise gelernt habe: <strong>Konsequenz und Ausdauer</strong> sind alles. Spracherwerb ist kein Sprint; es ist ein Marathon. Es wird Höhen und Tiefen geben, Momente der Frustration und Zeiten, in denen Sie das Gefühl haben, keine Fortschritte zu machen. Aber Sie müssen weitermachen! <strong>Erstellen Sie einen regelmäßigen Lernplan</strong> und halten Sie sich so gut wie möglich daran, auch wenn es nur 30 Minuten pro Tag sind. <strong>Die Motivation wird schwanken</strong>, daher brauchen Sie Disziplin. Feiern Sie Ihre kleinen Erfolge, setzen Sie realistische Erwartungen und versuchen Sie, Freude am Prozess selbst zu finden. Denken Sie daran, Ihren <strong>Fortschritt zu verfolgen</strong> (wie ich es mit meinen Tabellenkalkulationen getan habe!) und überprüfen Sie regelmäßig Ihre Ziele und Lernmethoden, um sicherzustellen, dass sie noch funktionieren. Nehmen Sie die Herausforderungen an, lernen Sie aus Ihren Fehlern und vor allem, <strong>geben Sie nicht auf!</strong> Flüssigkeit ist mit konsequentem Einsatz, den richtigen Ressourcen und einer positiven Einstellung absolut erreichbar. Und während Sie Fortschritte machen, denken Sie daran, Ihr Niveau zu überprüfen und das Gelernte zu üben. Für zuverlässige Bewertung und Übung in Grammatik, Englischgebrauch, Wortschatz und Lesen empfehle ich persönlich <a href="https://englishtests.online/" target="_blank" rel="noopener noreferrer">englishtests.online</a>. Es ist eine großartige Ressource für kostenlose Englischtests, um Ihren Fortschritt zu messen und Ihre Fähigkeiten zu schärfen.</p>
             <div class="tip-box">
                 <div class="tip-title">Tipp:</div>
                 <p><strong>Machen Sie das Englischlernen zu einer <em>Gewohnheit</em>, nicht nur zu einem Hobby. Erstellen Sie einen realistischen Lernplan und halten Sie sich daran, auch wenn die Motivation nachlässt. Feiern Sie kleine Siege und denken Sie daran – Ausdauer ist der ultimative Schlüssel! Und vergessen Sie nicht, Ihre Fähigkeiten regelmäßig mit Ressourcen wie englishtests.online zu bewerten, um Ihre Verbesserung zu verfolgen.</strong></p>
@@ -424,7 +424,7 @@
         "publisher": {
             "@type": "Organization",
             "name": "englishtests.online",
-            "url": "https://englishtests.online"
+            "url": "https://englishtests.online/"
         },
         "url": "https://englishtests.online/de/englisch-effektiv-lernen",
         "mainEntityOfPage": {
