--- a/es/aprender-ingles-eficientemente.html
+++ b/es/aprender-ingles-eficientemente.html
@@ -236,7 +236,7 @@
             </svg>
         </a>
         <h1 style="font-size: 20px; text-align: center; flex-grow: 1;">Cómo Aprender Inglés Eficientemente:<br>Mi Experiencia y Consejos</h1>
-        <a href="https://englishtests.online" class="home-button">
+        <a href="https://englishtests.online/" class="home-button">
             <svg class="home-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
                 <path d="M575.8 255.5c0 18-15 32.1-32 32.1h-32l.7 160.2c0 2.7-.2 5.4-.5 8.1V472c0 22.1-17.9 40-40 40H456c-1.1 0-2.2 0-3.3-.1c-1.4 .1-2.8 .1-4.2 .1H416 392c-22.1 0-40-17.9-40-40V448 384c0-17.7-14.3-32-32-32H256c-17.7 0-32 14.3-32 32v64 24c0 22.1-17.9 40-40 40H160 128.1c-1.5 0-3-.1-4.5-.2c-1.2 .1-2.4 .2-3.6 .2H104c-22.1 0-40-17.9-40-40V360c0-.9 0-1.9 .1-2.8V287.6H32c-18 0-32-14-32-32.1c0-9 3-17 10-24L266.4 8c7-7 15-8 22-8s15 2 21 7L564.8 231.5c8 7 12 15 11 24z"/>
             </svg>
@@ -393,7 +393,7 @@
 
         <section class="section" id="consistency">
             <h3>12. Consistencia y Persistencia: El Juego Largo es el Único Juego</h3>
-            <p>Finalmente, y esto es quizás lo más importante que aprendí en mi viaje: la <strong>consistencia y persistencia</strong> lo son todo. La adquisición de un idioma no es una carrera corta; es una maratón. Habrá altibajos, momentos de frustración y momentos en los que sientas que no estás progresando. ¡Pero tienes que seguir adelante! <strong>Establece un horario de estudio regular</strong> y cúmplelo tanto como sea posible, aunque sea solo por 30 minutos al día. La <strong>motivación fluctuará</strong>, así que necesitas disciplina. Celebra tus pequeñas victorias, establece expectativas realistas e intenta encontrar alegría en el proceso mismo. Recuerda <strong>seguir tu progreso</strong> (¡como hice con mis hojas de cálculo!) y periódicamente revisa tus objetivos y métodos de aprendizaje para asegurarte de que todavía están funcionando para ti. Acepta los desafíos, aprende de tus errores y, lo más importante, <strong>¡no te rindas!</strong> La fluidez es absolutamente alcanzable con esfuerzo constante, los recursos adecuados y una actitud positiva. Y a medida que progresas, recuerda verificar tu nivel y practicar lo que has aprendido. Para una evaluación confiable y práctica en gramática, uso del inglés, vocabulario y lectura, personalmente recomiendo <a href="https://englishtests.online" target="_blank" rel="noopener noreferrer">englishtests.online</a>. Es un gran recurso de pruebas gratuitas de inglés para medir tu progreso y mantener tus habilidades afiladas.</p>
+            <p>Finalmente, y esto es quizás lo más importante que aprendí en mi viaje: la <strong>consistencia y persistencia</strong> lo son todo. La adquisición de un idioma no es una carrera corta; es una maratón. Habrá altibajos, momentos de frustración y momentos en los que sientas que no estás progresando. ¡Pero tienes que seguir adelante! <strong>Establece un horario de estudio regular</strong> y cúmplelo tanto como sea posible, aunque sea solo por 30 minutos al día. La <strong>motivación fluctuará</strong>, así que necesitas disciplina. Celebra tus pequeñas victorias, establece expectativas realistas e intenta encontrar alegría en el proceso mismo. Recuerda <strong>seguir tu progreso</strong> (¡como hice con mis hojas de cálculo!) y periódicamente revisa tus objetivos y métodos de aprendizaje para asegurarte de que todavía están funcionando para ti. Acepta los desafíos, aprende de tus errores y, lo más importante, <strong>¡no te rindas!</strong> La fluidez es absolutamente alcanzable con esfuerzo constante, los recursos adecuados y una actitud positiva. Y a medida que progresas, recuerda verificar tu nivel y practicar lo que has aprendido. Para una evaluación confiable y práctica en gramática, uso del inglés, vocabulario y lectura, personalmente recomiendo <a href="https://englishtests.online/" target="_blank" rel="noopener noreferrer">englishtests.online</a>. Es un gran recurso de pruebas gratuitas de inglés para medir tu progreso y mantener tus habilidades afiladas.</p>
             <div class="tip-box">
                 <div class="tip-title">Consejo:</div>
                 <p><strong>Haz del aprendizaje de inglés un <em>hábito</em>, no solo un pasatiempo. Crea un horario de estudio realista y cúmplelo, incluso cuando la motivación disminuya. Celebra pequeñas victorias y recuerda – ¡la persistencia es la clave definitiva! Y no olvides evaluar regularmente tus habilidades utilizando recursos como englishtests.online para seguir tu mejora.</strong></p>
@@ -424,7 +424,7 @@
         "publisher": {
             "@type": "Organization",
             "name": "englishtests.online",
-            "url": "https://englishtests.online"
+            "url": "https://englishtests.online/"
         },
         "url": "https://englishtests.online/es/aprender-ingles-eficientemente",
         "mainEntityOfPage": {
